session-01/exercise-02/wordpress-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wordpress
  namespace: exercise-02
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: wordpress
        type: wpfront
    spec:
      containers:
      - image: bitnami/wordpress:4.9.4
        name: wordpress
        ports:
        - name: http
          containerPort: 80
        livenessProbe:
          httpGet:
            path: /wp-admin
            port: http
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /wp-admin
            port: http
          initialDelaySeconds: 5
          periodSeconds: 2
          timeoutSeconds: 1
