session-01/exercise-02/mariadb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: exercise-02
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3306
    targetPort: http
  selector:
    app: mariadb
